# Frenquencia_de_letras

./: Main.py  limpar_string.py  pyproject.toml
livros/: nietzsche.txt  spinoza.txt
