[tool.poetry]
name = "frenquencia_de_letras"
version = "0.1.0"
description = "Programa que verifica a frequencia de letras"
authors = ["GustavoDwSantos <gustavos200116@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
